@@ -5,7 +5,7 @@ use Test::More;
 if ( scalar @Wiki::Toolkit::TestLib::wiki_info == 0 ) {
     plan skip_all => "no backends configured";
 } else {
-    plan tests => ( 6 * scalar @Wiki::Toolkit::TestLib::wiki_info );
+    plan tests => ( 9 * scalar @Wiki::Toolkit::TestLib::wiki_info );
 }
 
 my $iterator = Wiki::Toolkit::TestLib->new_wiki_maker;
@@ -32,30 +32,40 @@ while ( my $wiki = $iterator->new_wiki ) {
     my %node = $wiki->retrieve_node( "Cafe Roma" );
     $wiki->write_node( "Cafe Roma", "A cafe unmod", $node{"checksum"},
         { category => [ "Cafe", "Oxford", "Unmoderated", "NotSeen" ],
-          latitude => "51.759", longitude => "-1.270" }
+          latitude => "51.759", longitude => "-1.270",
+          locale => [ "Oxford" ] },
     );
 
 
     my @md;
 
+
     # With nothing, get back undef
     is($wiki->store->list_metadata_by_type(), undef, "Needs a type given");
+
 
     # Postcode should be easy
     @md = $wiki->store->list_metadata_by_type("postcode");
     is_deeply( [sort @md], [ "OX1 2AY", "W6 9PL" ], 
        "Correct metadata listing" );
 
+
     # Latitude also
     @md = $wiki->store->list_metadata_by_type("latitude");
     is_deeply( [sort @md], [ "51.759", "51.911" ],
        "Correct metadata listing" );
+
 
     # For category, will not see unmoderated versio
     @md = $wiki->store->list_metadata_by_type("category");
     is_deeply( [sort @md], [ "Burgers", "Cafe", "Hammersmith",
                            "Oxford", "Restaurant", "Thai Food" ],
        "Correct metadata listing" );
+
+    @md = $wiki->store->list_metadata_names();
+    is_deeply( [sort @md], [ "category", "latitude", "longitude", "postcode" ],
+       "Correct metadata names" );
+
 
     # Now moderate that one, see it come in
     $wiki->moderate_node("Cafe Roma", 2);
@@ -64,11 +74,21 @@ while ( my $wiki = $iterator->new_wiki ) {
                            "Oxford", "Restaurant", "Thai Food", "Unmoderated" ],
        "Correct metadata listing" );
 
+    @md = $wiki->store->list_metadata_names();
+    is_deeply( [sort @md], [ "category", "latitude", "locale",
+                             "longitude", "postcode" ],
+       "Correct metadata names" );
+
+
     # And un-moderate another, see its go away
     $wiki->store->dbh->do("UPDATE content SET moderated = 'f' WHERE version = 2");
     @md = $wiki->store->list_metadata_by_type("category");
     is_deeply( [sort @md], [ "Burgers", "Cafe", "Hammersmith",
                            "Oxford", "Restaurant", "Thai Food" ],
        "Correct metadata listing" );
+
+    @md = $wiki->store->list_metadata_names();
+    is_deeply( [sort @md], [ "category", "latitude", "longitude", "postcode" ],
+       "Correct metadata names" );
 }
 
