@@ -1,6 +1,8 @@
 0.77    ???
         Complete support for store->list_metadata_by_type, which
           returns a list of all the metadata values
+        Add store->list_metadata_names, which will tell you all the
+          different metadata types (names)
 
 0.76    13 July 2008
         Really add missing prereq of DBI!
